[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".vscode",
    "data",
    "frontend",
]

line-length = 120
indent-width = 4

# Assume Python 3.11
target-version = "py311"

cache-dir = "/storage/cache/pycache/ruff"

[tool.ruff.lint]
select = ["E", "F", "I", "C", "R","I001", "I002", "RET504"]
ignore = ["INP001", "D100","D401","D415", "D400", "N812", "T201", "S101", "PLR2004", "ANN002"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
cache_dir = "/storage/cache/pytest"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["backend/app"]
branch = true

[tool.coverage.report]
include_namespace_packages = true
show_missing = true

[project]
name = "localrun"
version = "1.0.0"
description = "Self-hosted tunnel management platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]
